# glimpse

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  glimpse-cli  install_manifest.txt  typeflag.h  utils.cmake
api/ParserAPI/: ParserAPI.c
api/ParserAPI/include/: ParserAPI.h
api/TypeAPI/: TypeAPI.c
api/TypeAPI/include/: TypeAPI.h
doc/: PluginSystem.txt  TypeSystem.txt
examples/: plugin.c
include/: .pluginloader.h.swp  address.h  api.h  chartable.h  data.h  def.h  future.h  glimpse.h  init.h  log.h  parser.h  plugin.h  pluginloader.h  profiler.h  retval.h  scanner.h  stack.h  strpool.h  symbol.h  thread.h  tree.h  typeflag.h  typeparser.h  typesystem.h  vector.h  version.h
include/glimpse/: address.h  api.h  builtintype.h  chartable.h  data.h  def.h  future.h  init.h  log.h  plugin.h  pluginloader.h  profiler.h  retval.h  scanner.h  stack.h  strpool.h  symbol.h  thread.h  tree.h  typeparser.h  typesystem.h  vector.h  version.h
lex/: typedesc.l  typedesc.y
plugin/include/integer/: fixlength.h  integer.h
plugin/integer/: alias.c  fixlength.c  plugin.c
scripts/: glimpse-config.txt  install-glimpse-config.sh  uninstall.sh
src/: address.c  builtintype.c  chartable.c  data.c  init.c  log.c  parser.c  pluginloader.c  profiler.c  scanner.c  stack.c  strpool.c  symbol.c  thread.c  tree.c  typeflag.c  typeparser.c  typesystem.c  vector.c  version.c
src/plugin/: plugin.c
test/: address.c  api.c  chartable.c  cli.glimpse  integer.c  log.c  plugin.c  plugindep.c  profiler.c  scanner.c  strpool.c  symbol.c  typeapi.c  typeparser.c  typesystem.c  vector.c
test/api/testapi/: testapi.c
test/api/testapi/include/: testapi.h
test/plugin/: testapi_plugin.c
test/plugin/baddep_A/: a.c
test/plugin/baddep_B/: a.c
test/plugin/deptest_A/: a.c
test/plugin/deptest_B/: a.c
test/plugin/deptest_C/: a.c
test/plugin/export/: plugin.c
test/plugin/import/: plugin.c
test/plugin/loopdep_A/: a.c
test/plugin/loopdep_B/: a.c
test/plugin/testapi_plugin/: testapi_plugin.c
unused/: data.c  data.h  parser.c  parser.h
utils/: .cli.c.swo  cli.c
