cmake_minimum_required(VERSION 2.6)
project(glimpse)
set(glimpse_version "0.0.1")
set(CMAKE_INSTALL_PREFIX "$ENV{PREFIX}")
if("$ENV{DEBUG}" EQUAL "1")
	set(glimpse_log_level 6)
	set(CFLAGS -g\ -DLOG_LEVEL=${glimpse_log_level}\ -DENABLE_PROFILER\ -DGLIMPSE_DEBUG)
	set(LDFLAGS \ )
	set(APIList testapi)
else("$ENV{DEBUG}" EQUAL "1")
	set(glimpse_log_level 3)
	set(CFLAGS -g\ -DLOG_LEVEL=${glimpse_log_level}\ -O3)
	set(LDFLAGS \ )
	set(APIList "")
endif("$ENV{DEBUG}" EQUAL "1")

include(utils.cmake)

set(APIList ${APIList} TypeAPI)
set(plugin_dir ${CMAKE_INSTALL_PREFIX}/lib/glimpse/plugins/)

#build

#libglimpse.a
aux_source_directory(src/ glimpse_FILES)
set_source_files_properties(${glimpse_FILES} PROPERTIES COMPILE_FLAGS ${CFLAGS}\ -DVERSION=\\\"${glimpse_version}\\\" )
add_library(glimpse ${glimpse_FILES})

add_api(api TypeAPI .)
add_api(api ParserAPI .)

#plugins
add_plugin(plugin integer api/TypeAPI .)

#glimpse-cli
set_source_files_properties("utils/cli.c" PROPERTIES COMPILE_FLAGS ${CFLAGS}\ -Iapi/TypeAPI/include\ -DGLIMPSE_CLI_DEFAULT_PATH=\\\"${plugin_dir}\\\")
add_executable(glimpse-cli "utils/cli.c")
target_link_libraries(glimpse-cli readline)
target_link_libraries(glimpse-cli ${APIList})
target_link_libraries(glimpse-cli glimpse)
target_link_libraries(glimpse-cli dl)
target_link_libraries(glimpse-cli pthread)

#installation
install_headers(include "")
install_headers(include glimpse)
install_api(api TypeAPI)
install_api(api ParserAPI)
install_plugin(plugin integer)
install_targets(/bin glimpse-cli)

add_plugin(test/plugin testapi_plugin test/api/testapi test)
add_utest(log)
add_api(test/api testapi test)
add_utest_with_api(api testapi test/api/testapi test)
add_utest_with_api(plugin testapi test/api/testapi test)
add_plugin(test/plugin deptest_A test/api/testapi test)
add_plugin(test/plugin deptest_B test/api/testapi test)
add_plugin(test/plugin deptest_C test/api/testapi test)
add_plugin(test/plugin loopdep_A test/api/testapi test)
add_plugin(test/plugin loopdep_B test/api/testapi test)
add_plugin(test/plugin baddep_A test/api/testapi test)
add_plugin(test/plugin baddep_B test/api/testapi test)
add_utest_with_api(plugindep testapi test/api/testapi) 
add_utest_with_api(integer TypeAPI api/TypeAPI)
add_utest(symbol)
add_plugin(test/plugin export api/TypeAPI test)
add_plugin(test/plugin import api/TypeAPI test)
add_utest_with_api(typeapi TypeAPI api/TypeAPI)
add_utest(chartable)
add_utest(vector)
add_utest_with_api(typesystem TypeAPI api/TypeAPI)
add_utest_with_api(scanner TypeAPI api/TypeAPI)
add_utest(profiler)
add_utest(strpool)
add_utest_with_api(typeparser TypeAPI api/TypeAPI)
add_utest_with_api(address TypeAPI api/TypeAPI)
